# agreementmanagement/api/openapi.yaml
@@ -89,6 +89,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/P1Error'
           description: Not found.
+        "409":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/P1Error'
+          description: Conflict.
         "429":
           content:
             application/json:
@@ -136,6 +142,18 @@ components:
           schema:
             $ref: '#/components/schemas/P1Error'
       description: Not found.
+    "405":
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/P1Error'
+      description: "Invalid request received.  Malformed JSON, malformed HTTP request."
+    "409":
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/P1Error'
+      description: Conflict.
     "429":
       content:
         application/json:
@@ -209,6 +227,10 @@ components:
         maximumValue:
           description: The maximum value allowed for the request.
           type: integer
+        referencedValues:
+          items:
+            type: string
+          type: array
       type: object
     P1Error_details_inner:
       properties:
